Fix Dialog so it doesn't exceed parent dimensions
Previously, when the height of the Dialog exceeded the parent,
the overflow would get cut off rather than allowing the user to
scroll through the entire contents of the Dialog.

There were several reasons why this was happening:
1) The height was being set to 100% (aka: pulled from the parent iframe) and
the height of the parent was already incorrect (aka: exceeded it's
parent).
2) Scroll was not enabled/supported.
3) The Dialog used position fixed in several places which made auto
positioning difficult.

--- a/lms/static/styles/components/_Dialog.scss
+++ b/lms/static/styles/components/_Dialog.scss
@@ -1,32 +1,15 @@
-.Dialog__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .Dialog__background {
-  background-color: black;
-  bottom: 0;
-  left: 0;
-  opacity: 0.5;
-  position: fixed;
-  right: 0;
-  top: 0;
+  display: flex;
+  justify-content: center;
+  overflow: scroll;
+  background-color: $grey-5;
 }
 
 .Dialog__content {
+  max-width: 75%;
+  margin: auto;
   background-color: white;
   border-radius: 3px;
-  margin-left: auto;
-  margin-right: auto;
   padding: 20px;
 }
 
